# tracemind

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  skills-lock.json
agents/model-collector/: pyproject.toml
agents/model-collector/model_collector/: __init__.py  config.py  ring_buffer.py  sender.py  writer.py
agents/model-collector/model_collector/adapters/: __init__.py  pytorch_adapter.py
agents/model-collector/model_collector/introspection/: __init__.py
agents/model-collector/scripts/: demo_hook.py
agents/model-collector/tests/: test_pytorch_adapter.py  test_ring_buffer.py  test_writer.py
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  render.yaml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_ai_layer.py
apps/api/app/: config.py  main.py  security.py
apps/api/app/models/: __init__.py  ai_layer.py  annotation.py  base.py  device.py  incident.py  telemetry.py  user.py  workspace.py
apps/api/app/rca/: __init__.py
apps/api/app/rca/ai_rules/: __init__.py  base.py  rule_ai001.py  rule_ai002.py  rule_ai003.py
apps/api/app/routers/: ai_ingest.py  auth.py  devices.py  health.py  incidents.py  ingest.py  projects.py  seed.py
apps/api/app/schemas/: ai_layer.py  auth.py  device.py  health.py  incident.py  telemetry.py
apps/api/app/services/: analysis.py  replay_bundle.py
apps/api/tests/: test_ai_query.py  test_ai_rules.py  test_analysis_rules.py  test_health.py  test_schemas_ai_layer.py
(+41 files in other folders)
