[project]
name = "watchpoint-model-collector"
version = "0.1.0"
description = "Watchpoint model-collector — PyTorch/ONNX/TensorRT hook capture for edge AI systems"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "msgpack>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
pytorch = [
    "torch>=2.0",
    "torchvision>=0.15",
]
onnx = [
    "onnxruntime>=1.16",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "torch>=2.0",
    "torchvision>=0.15",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model_collector"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
